added user permissions and changed some data

--- a/protected/mysantaquesa.html
+++ b/protected/mysantaquesa.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,6 +25,7 @@
         <p>You've Accessed Our Super Secure Database</p>
         <div id="db-buttons">
             <button class="db-button" id="personalInfoButton">Personal Info</button>
+            <button class="db-button" id="classRosterButton">Class Roster</button>
             <button class="db-button" id="classScheduleButton" >Class Schedule</button>
             <button class="db-button" id="facultyDirectoryButton" >Faculty Directory</button>
             <button class="db-button" id="studentDirectoryButton" >Student Directory</button>
@@ -96,3 +98,4 @@
 
 </body>
 </html>
+
