updated password hashing and database access

--- a/protected/mysantaquesa.html
+++ b/protected/mysantaquesa.html
@@ -35,6 +35,7 @@
         <!-- Content will be dynamically loaded here based on the button clicked -->
         <div id="dbContent">
             <ul id="dbList"></ul>
+            <ul id="dbList_part2"></ul>
         </div>
     </div>
 
