--- a/protected/mysantaquesa.html
+++ b/protected/mysantaquesa.html
@@ -41,7 +41,7 @@
 
     <section class="page-title">
         <!-- Content of the main page goes here -->
-        <div id="school-logo">
+        <div id="school-logo-small">
             <img src="/assets/graphics/SantaQuesaV2_cut_red.png">
         </div>
         
