--- a/public/calendar.html
+++ b/public/calendar.html
@@ -4,38 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santa Quesa High School - Calendar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>Santa Quesa High School</h1>
+        <div id="navigation-container"></div>
     </header>
+    <div class="content">
+        <section class="page-title">
+            <!-- Content of the main page goes here -->
+            <h2 id="currentMonth">Calendar</h2>
+        </section>
 
-    <!-- Include the navigation menu -->
-    <div id="navigation-container"></div>
-
-    <section class="page-title">
-        <!-- Content of the main page goes here -->
-        <h2 id="currentMonth">Calendar</h2>
-    </section>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Sun</th>
-                <th>Mon</th>
-                <th>Tue</th>
-                <th>Wed</th>
-                <th>Thu</th>
-                <th>Fri</th>
-                <th>Sat</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Calendar content will be dynamically generated here -->
-        </tbody>
-    </table>
+        <table>
+            <thead>
+                <tr>
+                    <th>Sun</th>
+                    <th>Mon</th>
+                    <th>Tue</th>
+                    <th>Wed</th>
+                    <th>Thu</th>
+                    <th>Fri</th>
+                    <th>Sat</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Calendar content will be dynamically generated here -->
+            </tbody>
+        </table>
+    </div>
 
 
 
@@ -111,6 +111,7 @@
 
         generateCalendar();
     </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
 </body>
