--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santa Quesa High School</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
+    <!-- <header>
         <h1>Santa Quesa High School</h1>
-    </header>
+    </header> -->
 
     <!-- Include the navigation menu -->
-    <div id="navigation-container"></div>
-    <section class="page-title">
-        <!-- Content of the main page goes here -->
+ 
+    <header>
+        <div id="navigation-container"></div>
+    </header>
+    <div class="content" id="index-content">
+    </div>
+   
+    <!-- <section class="page-title">
         <div id="school-logo">
-            <img src="assets/graphics/SantaQuesaV2_yellow_red.png">
+            <img src="assets/graphics/SQLogo_Red.png">
         </div>
         <p>Welcome to Santa Quesa High School's website!</p>
-    </section>
+    </section> -->
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2024 Santa Quesa High School</p>
-    </footer>
-    <script src="loadNav.js"></script>
+    </footer> -->
+    <script src="loadNav.js" type="module"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function (){
+            fetch('/index-content.html')
+                .then(response => response.text())
+                .then(html => {
+                    document.getElementById('index-content').innerHTML = html;
+                })
+                .catch(error => console.error('Error fetching index page:', error));
+        })
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
