--- a/public/login.html
+++ b/public/login.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santa Quesa High School</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>Santa Quesa High School</h1>
+        <div id="navigation-container"></div>
     </header>
-
-    <!-- Include the navigation menu -->
-    <div id="navigation-container"></div>
-
+    <div class="content"> 
     <section class="page-title">
         <!-- Content of the main page goes here -->
         <h2>Login</h2>
@@ -38,7 +37,7 @@
             </div>
         </form>
     </div>
-
+</div>
 
 
 
@@ -47,25 +46,8 @@
         <p>&copy; 2024 Santa Quesa High School</p>
     </footer>
     <script src="loadNav.js"></script>
-    <!-- <script>
-        function attemptLogin(event) {
-            event.preventDefault();
-    
-            // Replace this with your server-side authentication logic
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-    
-            // Simulate a successful login
-            if (username === 'ken' && password === 'justken') {
-                alert('Login successful! Redirecting...');
-                // Redirect to another page or perform further actions
-                window.location.href = 'mysantaquesa.html';
-            } else {
-                alert('Invalid credentials. Please try again.');
-            }
-        }
-    </script> -->
     <script src="login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 </html>
