--- a/public/nav.html
+++ b/public/nav.html
@@ -1,9 +1,53 @@
 <!-- nav.html -->
-<nav id="mainNav">
+
+<div id="schoolTitle">
+    <h1>Santa Quesa High School</h1>
+</div>
+<!-- <nav id="mainNav">
     <a href="/index.html">Home</a>
     <a href="/directory.html">Directory</a>
     <a href="/calendar.html">Calendar</a>
     <a href="/bell_schedule.html">Bell Schedule</a>
     <a href="/news.html">News</a>
     <a href="/login.html">Login</a>
+</nav> -->
+<nav class="navbar navbar-expand-sm navbar-light" id="mainNav" style="background-color: var(--alabaster); color: var(--cinnabar);">
+    <div class="container">
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#n_bar" aria-controls="navbarNavAltMarkup" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="n_bar">
+            <ul class="navbar-nav">
+                <li class="nav-item active"><a class="nav-link" href="/index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/directory.html">Directory</a></li>
+                <li class="nav-item"><a class="nav-link" href="/calendar.html">Calendar</a></li>
+                <li class="nav-item"><a class="nav-link" href="/bell_schedule.html">Bell Schedule</a></li>
+                <li class="nav-item"><a class="nav-link" href="/news.html">News</a></li>
+                <li class="nav-item"><a class="nav-link" href="/login.html">Login</a></li>
+            </ul>
+        </div>
+    </div>
 </nav>
+
+<!-- <section class="mb-3">
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <button class="navbar-toggler second-button" type="button" data-mdb-collapse-init
+        data-mdb-target="#navbarToggleExternalContent10"
+        aria-controls="navbarToggleExternalContent10" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <div class="animated-icon2"><span></span><span></span><span></span><span></span></div>
+      </button>
+    </div>
+  </nav>
+  <div class="collapse" id="navbarToggleExternalContent10">
+    <div class="bg-body-tertiary shadow-3 p-4">
+      <button data-mdb-button-init data-mdb-ripple-init
+        class="btn btn-link btn-block border-bottom m-0">Link 1</button>
+      <button data-mdb-button-init data-mdb-ripple-init
+        class="btn btn-link btn-block border-bottom m-0">Link 2</button>
+      <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-block m-0">Link
+        3</button>
+    </div>
+  </div>
+</section> -->
