--- a/public/news.html
+++ b/public/news.html
@@ -4,51 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santa Quesa High School</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>Santa Quesa High School</h1>
+        <div id="navigation-container"></div>
     </header>
-
-    <!-- Include the navigation menu -->
-    <div id="navigation-container"></div>
-
-    <section class="page-title">
-        <!-- Content of the main page goes here -->
-        <h2>School News</h2>
-    </section>
-    <section class="news-articles">
-        <article>
-            <h1>Epic Pep Rally Sparks Excitement for Upcoming Sports Season</h1>
-            <p>Hey Cheesemeisters! The gymnasium was on fire yesterday as our school hosted the most epic pep rally ever! The entire
-                student body gathered to show support for our amazing sports teams. Cheerleaders flipped through the air, the
-                band played our favorite tunes, and the spirit squad got everyone pumped up. We're all buzzing with excitement
-                for the upcoming sports season. Let's go, Cheesemeisters!</p>
-        </article>
-        <article>
-            <h1>Innovative Science Fair Projects Blow Minds</h1>
-            <p>Science geeks, rejoice! Our annual science fair showcased mind-blowing projects from our brilliant classmates. From homemade volcanoes that erupted with style to cutting-edge robotics, our school is brimming with scientific talent. Congrats to all participants for making our school a hub of innovation!</p>
-        </article>
-        <article>
-            <h1>Art Extravaganza Takes Over School Hallways</h1>
-            <p>Last week, our hallways transformed into an art lover's paradise. The Art Club organized an incredible art extravaganza, featuring masterpieces from our talented student artists. Paintings, sculptures, and multimedia installations turned our school into a vibrant gallery. Kudos to the artists for sharing their creativity with us!</p>
-        </article>
-        <article>
-            <h1>Student Council Raises the Bar with Charity Drive</h1>
-            <p>Our Student Council is crushing it! They organized a charity drive that exceeded all expectations. With donation bins placed strategically around the school, students and staff generously contributed canned goods, clothing, and other essentials. The spirit of giving is alive and well at our school, thanks to the amazing efforts of Student Council!</p>
-        </article>
-        <article>
-            <h1>Drama Club's Spectacular Performance Leaves Audience in Awe</h1>
-            <p>Lights, camera, action! The Drama Club's latest performance left the audience on the edge of their seats. The talented cast and crew put on a spectacular show, proving once again that our school is a breeding ground for theatrical excellence. Drama enthusiasts, you won't want to miss the next big production!</p>
-        </article>
-    </section>
+    <div class="content">
+        <section class="page-title">
+            <!-- Content of the main page goes here -->
+            <h2>School News</h2>
+        </section>
+        <section class="news-articles">
+            <article>
+                <h1>Epic Pep Rally Sparks Excitement for Upcoming Sports Season</h1>
+                <p>Hey Cheesemeisters! The gymnasium was on fire yesterday as our school hosted the most epic pep rally ever! The entire
+                    student body gathered to show support for our amazing sports teams. Cheerleaders flipped through the air, the
+                    band played our favorite tunes, and the spirit squad got everyone pumped up. We're all buzzing with excitement
+                    for the upcoming sports season. Let's go, Cheesemeisters!</p>
+            </article>
+            <article>
+                <h1>Innovative Science Fair Projects Blow Minds</h1>
+                <p>Science geeks, rejoice! Our annual science fair showcased mind-blowing projects from our brilliant classmates. From homemade volcanoes that erupted with style to cutting-edge robotics, our school is brimming with scientific talent. Congrats to all participants for making our school a hub of innovation!</p>
+            </article>
+            <article>
+                <h1>Art Extravaganza Takes Over School Hallways</h1>
+                <p>Last week, our hallways transformed into an art lover's paradise. The Art Club organized an incredible art extravaganza, featuring masterpieces from our talented student artists. Paintings, sculptures, and multimedia installations turned our school into a vibrant gallery. Kudos to the artists for sharing their creativity with us!</p>
+            </article>
+            <article>
+                <h1>Student Council Raises the Bar with Charity Drive</h1>
+                <p>Our Student Council is crushing it! They organized a charity drive that exceeded all expectations. With donation bins placed strategically around the school, students and staff generously contributed canned goods, clothing, and other essentials. The spirit of giving is alive and well at our school, thanks to the amazing efforts of Student Council!</p>
+            </article>
+            <article>
+                <h1>Drama Club's Spectacular Performance Leaves Audience in Awe</h1>
+                <p>Lights, camera, action! The Drama Club's latest performance left the audience on the edge of their seats. The talented cast and crew put on a spectacular show, proving once again that our school is a breeding ground for theatrical excellence. Drama enthusiasts, you won't want to miss the next big production!</p>
+            </article>
+        </section>
+    </div>
 
     <footer>
         <p>&copy; 2024 Santa Quesa High School</p>
     </footer>
     <script src="loadNav.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
