--- a/protected/mysantaquesa.html
+++ b/protected/mysantaquesa.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div id="school-logo-small">
-            <img src="/assets/graphics/SantaQuesaV2_cut_red.png">
+            <img src="/assets/graphics/SQ_Circle_S_Logos/SQ_red_on_yellow@3x.png">
         </div>
 
         <footer>
