--- a/public/directory-content.html
+++ b/public/directory-content.html
@@ -366,9 +366,9 @@
 
     </section>
 
-    <!-- <footer>
+    <footer>
         <p>&copy; 2024 Santa Quesa High School</p>
-    </footer> -->
+    </footer>
 
     <script>
         // Adjust grid column settings based on the number of items
