--- a/public/index-content.html
+++ b/public/index-content.html
@@ -1,11 +1,11 @@
 <!-- index-content.html -->
 
-    <section class="page-title">
+    <section>
         <!-- Content of the main page goes here -->
         <div id="school-logo">
-            <img src="assets/graphics/SQLogo_Red.png">
+            <img src="assets/graphics/SQ_Circle_S_Logos/SQ_red_on_yellow@3x.png">
         </div>
-        <p>Welcome to Santa Quesa High School's website!</p>
+        <h2>Home of the Cheesemeisters!</h2>
     </section>
 
     <footer>
