--- a/public/login.html
+++ b/public/login.html
@@ -36,6 +36,11 @@
                 <button type="submit" onclick="authenticateUser()">Login</button>
             </div>
         </form>
+        <h4>Hints</h4>
+        <p>Try these username/password combos to see the database in action:</p>
+        <p>ken/justken (teacher)</p>
+        <p>bob/bob (student)</p>
+        <p>okla/homa (admin)</p>
     </div>
 </div>
 
