--- a/public/bell_schedule.html
+++ b/public/bell_schedule.html
@@ -11,45 +11,46 @@
 <body>
 
     <header>
+        <!-- Navbar goes here -->
         <div id="navigation-container"></div>
     </header>
     <div class="content">
 
-    <section class="page-title">
-        <!-- Content of the main page goes here -->
-        <h2>Bell Schedule</h2>
-    </section>
+        <section class="page-title">
+            <!-- Content of the main page goes here -->
+            <h2>Bell Schedule</h2>
+        </section>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Period</th>
-                <th>Time</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1st Period</td>
-                <td>8:00 AM - 9:25 AM</td>
-            </tr>
-            <tr>
-                <td>2nd Period</td>
-                <td>9:30 AM - 10:55 AM</td>
-            </tr>
-            <tr>
-                <td>Lunch</td>
-                <td>11:00 AM - 11:55 AM</td>
-            </tr>
-            <tr>
-                <td>3rd Period</td>
-                <td>12:00 PM - 1:25 PM</td>
-            </tr>
-            <tr>
-                <td>4th Period</td>
-                <td>1:30 PM - 2:55 PM</td>
-            </tr>
-        </tbody>
-    </table>
+        <table>
+            <thead>
+                <tr>
+                    <th>Period</th>
+                    <th>Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1st Period</td>
+                    <td>8:00 AM - 9:25 AM</td>
+                </tr>
+                <tr>
+                    <td>2nd Period</td>
+                    <td>9:30 AM - 10:55 AM</td>
+                </tr>
+                <tr>
+                    <td>Lunch</td>
+                    <td>11:00 AM - 11:55 AM</td>
+                </tr>
+                <tr>
+                    <td>3rd Period</td>
+                    <td>12:00 PM - 1:25 PM</td>
+                </tr>
+                <tr>
+                    <td>4th Period</td>
+                    <td>1:30 PM - 2:55 PM</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <footer>
