--- a/public/calendar.html
+++ b/public/calendar.html
@@ -11,6 +11,7 @@
 <body>
 
     <header>
+        <!-- Navbar goes here -->
         <div id="navigation-container"></div>
     </header>
     <div class="content">
@@ -47,12 +48,14 @@
     <script src="loadNav.js"></script>
     <script>
         // JavaScript code for dynamically generating calendar content
-        // You can use a library like moment.js for more advanced date handling
 
         // Sample event data
         const events = [
             { date: '2024-02-14', title: 'Valentine\'s Day' },
             { date: '2024-02-22', title: 'School Assembly' },
+            { date: '2024-05-15', title: 'Trivia Tournament' },
+            { date: '2024-05-16', title: 'Trivia Championships' },
+            { date: '2024-05-22', title: 'Graduation' },
             // Add more events as needed
         ];
 
