--- a/public/news.html
+++ b/public/news.html
@@ -11,28 +11,39 @@
 <body>
 
     <header>
+        <!-- navbar goes here -->
         <div id="navigation-container"></div>
     </header>
     <div class="content">
+         <!-- Content of the main page goes here -->
         <section class="page-title">
-            <!-- Content of the main page goes here -->
+           
             <h2>School News</h2>
         </section>
         <section class="news-articles">
             <article>
                 <h1>Epic Pep Rally Sparks Excitement for Upcoming Sports Season</h1>
                 <p>Hey Cheesemeisters! The gymnasium was on fire yesterday as our school hosted the most epic pep rally ever! The entire
-                    student body gathered to show support for our amazing sports teams. Cheerleaders flipped through the air, the
-                    band played our favorite tunes, and the spirit squad got everyone pumped up. We're all buzzing with excitement
-                    for the upcoming sports season. Let's go, Cheesemeisters!</p>
+                    student body gathered to show support for our amazing Kickball Team. Cheerleaders flipped through the air, the
+                    band played "Feels So Good" by Chuck Mangione, and Principal Fullerton performed a monologe from King Lear! We're all buzzing with excitement
+                    for the upcoming Kickball season. Let's go, Cheesemeisters!</p>
             </article>
             <article>
                 <h1>Innovative Science Fair Projects Blow Minds</h1>
-                <p>Science geeks, rejoice! Our annual science fair showcased mind-blowing projects from our brilliant classmates. From homemade volcanoes that erupted with style to cutting-edge robotics, our school is brimming with scientific talent. Congrats to all participants for making our school a hub of innovation!</p>
+                <p>Science geeks, rejoice! Our annual science fair showcased mind-blowing projects from 
+                    our brilliant cheesemeisters. From homemade volcanoes that spewed cheesy lava to
+                     cutting-edge robotic butter churners, our school is brimming with scientific talent.
+                      Congrats to all participants for making our school a delicious hub of innovation!</p>
             </article>
             <article>
                 <h1>Art Extravaganza Takes Over School Hallways</h1>
-                <p>Last week, our hallways transformed into an art lover's paradise. The Art Club organized an incredible art extravaganza, featuring masterpieces from our talented student artists. Paintings, sculptures, and multimedia installations turned our school into a vibrant gallery. Kudos to the artists for sharing their creativity with us!</p>
+                <p>Last week, our hallways transformed into an art lover's paradise. The Art Club 
+                    organized an incredible art extravaganza, featuring masterpieces from our talented 
+                    student artists. Paintings, sculptures, and multimedia installations turned our 
+                    school into a vibrant gallery. Boorelynn Knudsen showcased her newest edible sculpture,
+                    "Dimensions of Promise," made entirely out of locally made Gouda. Needless to say it didn't last
+                    long after the exibit finished! "Goudos" to the artists 
+                    for sharing their creativity with us!</p>
             </article>
             <article>
                 <h1>Student Council Raises the Bar with Charity Drive</h1>
@@ -40,7 +51,11 @@
             </article>
             <article>
                 <h1>Drama Club's Spectacular Performance Leaves Audience in Awe</h1>
-                <p>Lights, camera, action! The Drama Club's latest performance left the audience on the edge of their seats. The talented cast and crew put on a spectacular show, proving once again that our school is a breeding ground for theatrical excellence. Drama enthusiasts, you won't want to miss the next big production!</p>
+                <p>Lights, camera, action! The Drama Club's latest performance of "Strange Cheese" left the audience on the edge of their seats. 
+                    The talented cast and crew put on a spectacular show, proving once again that our 
+                    school is a breeding ground for theatrical excellence. As reported in The Dairy Citizen: 
+                    "LeVonnadelle Nipkins gave a performance for the ages in her role as Enchantress of Doom."
+                    There are still 3 more performances, so don't miss out!</p>
             </article>
         </section>
     </div>
